Fix text overlap

--- a/style/index.css
+++ b/style/index.css
@@ -402,6 +402,6 @@ a {
   }
 
   .overlay .bottom-text {
-    font-size:0.7rem;
+    font-size:0.6rem;
   }
 }
